[gd_scene load_steps=2 format=3 uid="uid://bh1i3j3uojkxv"]

[ext_resource type="Script" path="res://src/scripts/hud.gd" id="1_b1j6y"]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b1j6y")

[node name="TextEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -29.0
offset_right = 42.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
placeholder_text = "Enter Name"
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="Host" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = 7.0
offset_right = 16.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = 41.0
offset_right = 14.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "Join"

[connection signal="text_submitted" from="TextEdit" to="." method="_on_text_edit_text_submitted"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
